--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -181,6 +181,7 @@
         android:layout_marginBottom="208dp"
         android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
+        android:contentDescription="hacer llamada"
         app:layout_constraintBottom_toBottomOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="@+id/view4"
         app:layout_constraintHorizontal_bias="1.0"
@@ -200,6 +201,7 @@
         android:layout_marginBottom="208dp"
         android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
+        android:contentDescription="Visitar una url"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintStart_toStartOf="@+id/view3"
@@ -217,6 +219,7 @@
         android:layout_marginBottom="30dp"
         android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
+        android:contentDescription="Poner alarma"
         app:layout_constraintBottom_toBottomOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="@+id/view4"
         app:layout_constraintHorizontal_bias="1.0"
@@ -237,6 +240,7 @@
         android:layout_marginBottom="30dp"
         android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
+        android:contentDescription="Enviar gmail"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHorizontal_bias="1.0"
