--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -181,7 +181,7 @@
         android:layout_marginBottom="208dp"
         android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
-        android:contentDescription="hacer llamada"
+        android:contentDescription="@string/buttonTextCall"
         app:layout_constraintBottom_toBottomOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="@+id/view4"
         app:layout_constraintHorizontal_bias="1.0"
@@ -201,7 +201,7 @@
         android:layout_marginBottom="208dp"
         android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
-        android:contentDescription="Visitar una url"
+        android:contentDescription="@string/buttonTextUrl"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintStart_toStartOf="@+id/view3"
@@ -219,7 +219,7 @@
         android:layout_marginBottom="30dp"
         android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
-        android:contentDescription="Poner alarma"
+        android:contentDescription="@string/buttonTextAlarm"
         app:layout_constraintBottom_toBottomOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="@+id/view4"
         app:layout_constraintHorizontal_bias="1.0"
@@ -240,7 +240,7 @@
         android:layout_marginBottom="30dp"
         android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
-        android:contentDescription="Enviar gmail"
+        android:contentDescription="@string/buttonTextGmail"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHorizontal_bias="1.0"
