--- a/app/src/main/res/layout/activity_conf.xml
+++ b/app/src/main/res/layout/activity_conf.xml
@@ -41,10 +41,12 @@
         android:id="@+id/edit_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="120dp"
         android:ems="10"
         android:hint="Teléfono:"
         android:inputType="text"
+        android:textColor="@color/columbia_blue"
+        android:textColorHint="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -59,20 +61,24 @@
         android:ems="10"
         android:hint="URL: (https://*.com)"
         android:inputType="text"
+        android:textColor="@color/columbia_blue"
         android:textSize="20sp"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_phone" />
 
     <EditText
-        android:id="@+id/edit_alarm"
+        android:id="@+id/edit_alarm_hour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
-        android:hint="Alarma: (8:30)"
+        android:hint="Alarma: Hora"
         android:inputType="text"
+        android:textColor="@color/columbia_blue"
+        android:textColorHint="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -80,24 +86,38 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_url" />
 
     <EditText
-        android:id="@+id/edit_gmail"
+        android:id="@+id/edit_alarm_min"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
-        android:hint="usuario@gmail.com"
+        android:hint="Alarma: Min"
         android:inputType="text"
+        android:textColor="@color/columbia_blue"
+        android:textColorHint="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_alarm">
+        app:layout_constraintTop_toBottomOf="@+id/edit_alarm_hour" />
+
+    <EditText
+        android:id="@+id/edit_gmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:hint="usuario@gmail.com"
+        android:inputType="text"
+        android:textColor="@color/columbia_blue"
+        android:textColorHint="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_alarm_min">
 
     </EditText>
-
-    <!--Dentro del btn_config, he buscado sobre la funcion scaleType. Hace que el icono
-    escale en función del espacio que tenga el ImageButton, simplemente porque sin el
-    el icono se queda chico.-->
 
     <ImageButton
         android:id="@+id/btn_config"
