Entrega Proyecto Tema1 3.0.0

--- a/app/src/main/res/layout/activity_conf.xml
+++ b/app/src/main/res/layout/activity_conf.xml
@@ -12,7 +12,7 @@
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/mint_green"
+        android:background="@color/indigo_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -124,7 +124,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginTop="588dp"
-        android:background="@drawable/sharp_conf"
+        android:background="@drawable/button_pred"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
